fix(authorization): exception on deserialization